db vm now accessible
